--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,9 +1,30 @@
 <header>
     <nav>
         <img src="assets/xrage_logo.png">
-        <a href="#">Главная</a>
-        <a href="#">Абонементы</a>
-        <a href="#">Тренеры</a>
-        <a href="#">О нас</a>
+        <a href="#">Клубы</a>
+        <div class="drop-down-menu">
+            <a class="nav-header" href="#">Услуги<ion-icon name="chevron-down-outline"></ion-icon></a>
+            <div class="drop-down-content">
+                <a class="nav-postheader" href="#">В жопу раз</a>
+                <a class="nav-postheader" href="#">Вилкой в глаз</a>
+                <a class="nav-postheader" href="#">Фантазия закончилась</a>
+            </div>
+        </div>
+        <div class="drop-down-menu">
+            <a class="nav-header" href="#">О нас<ion-icon name="chevron-down-outline"></ion-icon></a>
+            <div class="drop-down-content">
+                <a class="nav-postheader" href="#">Геи мы понял?</a>
+                <a class="nav-postheader" href="#">Давай с нами!</a>
+                <a class="nav-postheader" href="#">Сасаааатьь!</a>
+            </div>
+        </div>
+        <div class="drop-down-menu">
+            <a class="nav-header" href="#">Ещё<ion-icon name="chevron-down-outline"></ion-icon></a>
+            <div class="drop-down-content">
+                <a class="nav-postheader" href="#">Даже долистал</a>
+                <a class="nav-postheader" href="#">Ты заслужил массаж</a>
+                <a class="nav-postheader" href="#">Тресни спинку!</a>
+            </div>
+        </div>
     </nav>
 </header>
