router config & worked navbar

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
-        <img src="assets/xrage_logo.png">
-        <a href="#">Клубы</a>
+        <img src="assets/xrage_logo.png" routerLink="">
+        <a routerLink="/clubs">Клубы</a>
         <div class="drop-down-menu">
-            <a class="nav-header" href="#">Услуги<ion-icon name="chevron-down-outline"></ion-icon></a>
+            <a class="nav-header" routerLink="services">Услуги<ion-icon name="chevron-down-outline"></ion-icon></a>
             <div class="drop-down-content">
                 <a class="nav-postheader" href="#">В жопу раз</a>
                 <a class="nav-postheader" href="#">Вилкой в глаз</a>
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="drop-down-menu">
-            <a class="nav-header" href="#">О нас<ion-icon name="chevron-down-outline"></ion-icon></a>
+            <a class="nav-header" routerLink="about">О нас<ion-icon name="chevron-down-outline"></ion-icon></a>
             <div class="drop-down-content">
                 <a class="nav-postheader" href="#">Геи мы понял?</a>
                 <a class="nav-postheader" href="#">Давай с нами!</a>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="drop-down-menu">
-            <a class="nav-header" href="#">Ещё<ion-icon name="chevron-down-outline"></ion-icon></a>
+            <a class="nav-header">Ещё<ion-icon name="chevron-down-outline"></ion-icon></a>
             <div class="drop-down-content">
                 <a class="nav-postheader" href="#">Даже долистал</a>
                 <a class="nav-postheader" href="#">Ты заслужил массаж</a>
