--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
-<header-component></header-component>
-<main>
-    <router-outlet></router-outlet>
-</main>
+<div class="container">
+    <header-component></header-component>
+    <div class="content">
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+    </div>
+</div>
