auth service & bootstrap (просто показать Роме, всё хуйня)

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,12 @@
-<div class="container">
+<div class="page">
     <header-component></header-component>
+
     <div class="content">
         <main>
             <router-outlet></router-outlet>
         </main>
+        <div class="footer">
+            <footer-component></footer-component>
+        </div>
     </div>
 </div>
