--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,35 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
 
+$primary: #1eb828;
+
+@import 'bootstrap/scss/bootstrap';
 /* ===== Scrollbar CSS ===== */
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: var(--green1) var(--gray1);
-  }
 
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 16px;
-  }
+/* Firefox */
 
-  *::-webkit-scrollbar-track {
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--green1);
+    border: 0px none #ffffff;
+    border-radius: 50px;
+}
+::-webkit-scrollbar-track {
     background: var(--gray1);
-  }
-
-  *::-webkit-scrollbar-thumb {
-    background-color: var(--green1);
-    border-radius: 10px;
-    border: 3px solid var(--white1);
-  }
-
+    border: 0px none #ffffff;
+}
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
 * {
     margin: 0;
     padding: 0;
     font-family: "Overpass", sans-serif;
 }
-
 html, body {
     height: 100%;
     padding: 0;
     margin: 0;
+}
+
+.user-content {
+    width: 60%;
 }
