--- a/frontend/src/app/components/login/auth.component.scss
+++ b/frontend/src/app/components/login/auth.component.scss
@@ -31,13 +31,13 @@ input {
     display: block;
     height: 50px;
     width: 100%;
-    background-color: rgba(255,255,255,0.07);
-    -webkit-text-fill-color: var(--white1);
+    background-color: rgba(100, 100, 100, 0.09);
+    color: black;
     border-radius: 3px;
     padding: 0 10px;
     margin-bottom: 8px;
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 label{
